--- a/MemeApp/Home/View/PostTableViewCell.xib
+++ b/MemeApp/Home/View/PostTableViewCell.xib
@@ -20,6 +20,9 @@
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pV8-Qi-ciw" userLabel="PostImage">
                         <rect key="frame" x="0.0" y="0.0" width="241" height="125.33333333333333"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                        </userDefinedRuntimeAttributes>
                     </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.up" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Rhp-Hq-D68" userLabel="ScoreIcon1">
                         <rect key="frame" x="16" y="136.66666666666669" width="14.333333333333336" height="12.333333333333343"/>
@@ -34,12 +37,18 @@
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                        </userDefinedRuntimeAttributes>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="XY3-rW-vU8">
                         <rect key="frame" x="38.333333333333329" y="135.33333333333334" width="186.66666666666669" height="42"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                        </userDefinedRuntimeAttributes>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CommentsIcon" translatesAutoresizingMaskIntoConstraints="NO" id="uQc-eb-Izd" userLabel="CommentIcon">
                         <rect key="frame" x="38.333333333333336" y="181.33333333333334" width="15.666666666666664" height="15.666666666666657"/>
@@ -49,6 +58,9 @@
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                        </userDefinedRuntimeAttributes>
                     </label>
                 </subviews>
                 <constraints>
@@ -79,8 +91,14 @@
                     <constraint firstItem="uQc-eb-Izd" firstAttribute="top" secondItem="XY3-rW-vU8" secondAttribute="bottom" constant="4" id="yhd-eI-50I"/>
                     <constraint firstItem="rS0-cx-la7" firstAttribute="centerY" secondItem="uQc-eb-Izd" secondAttribute="centerY" id="ziG-kt-cRP"/>
                 </constraints>
+                <userDefinedRuntimeAttributes>
+                    <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                </userDefinedRuntimeAttributes>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+            </userDefinedRuntimeAttributes>
             <connections>
                 <outlet property="commentValue" destination="rS0-cx-la7" id="p3i-uv-B5t"/>
                 <outlet property="postImage" destination="pV8-Qi-ciw" id="eVr-gU-nfa"/>
