--- a/MemeApp/Base.lproj/LaunchScreen.storyboard
+++ b/MemeApp/Base.lproj/LaunchScreen.storyboard
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,31 +16,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchBackground" translatesAutoresizingMaskIntoConstraints="NO" id="VQx-Nd-hoU">
-                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
-                            </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RedditLogo" translatesAutoresizingMaskIntoConstraints="NO" id="eEw-y8-1AB" userLabel="Logo">
                                 <rect key="frame" x="88.333333333333329" y="362" width="216.33333333333337" height="128"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VQx-Nd-hoU" secondAttribute="trailing" id="4tW-JW-iYX"/>
                             <constraint firstItem="eEw-y8-1AB" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="AY4-cT-DuA"/>
                             <constraint firstItem="eEw-y8-1AB" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="bottom" constant="-490" id="M5K-to-iqz"/>
-                            <constraint firstItem="VQx-Nd-hoU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Oku-oh-qI0"/>
                             <constraint firstItem="eEw-y8-1AB" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.168643" id="P0A-hY-NeS"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="VQx-Nd-hoU" secondAttribute="bottom" id="Ro3-rt-PsG"/>
                             <constraint firstItem="eEw-y8-1AB" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="TlM-sc-fTC"/>
                             <constraint firstItem="eEw-y8-1AB" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="0.55" id="lr1-83-zjE"/>
-                            <constraint firstItem="VQx-Nd-hoU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="m9y-x3-SV8"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="subviews">
-                                <exclude reference="VQx-Nd-hoU"/>
-                            </mask>
-                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -50,10 +37,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="LaunchBackground" width="375" height="406"/>
         <image name="RedditLogo" width="198" height="64"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
