--- a/MemeApp/Home/View/Home.storyboard
+++ b/MemeApp/Home/View/Home.storyboard
@@ -39,7 +39,7 @@
                                 <state key="normal" image="ConfigIcon"/>
                             </button>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="PEM-MS-3Ni">
-                                <rect key="frame" x="29.333333333333343" y="150.33333333333334" width="334.33333333333326" height="51.666666666666657"/>
+                                <rect key="frame" x="35.333333333333343" y="150.33333333333334" width="322.33333333333326" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="PEM-MS-3Ni" secondAttribute="height" multiplier="155:24" id="izK-rE-AVr"/>
                                 </constraints>
@@ -48,9 +48,11 @@
                                     <outlet property="delegate" destination="Y6W-OH-hqX" id="eMl-BF-Mrb"/>
                                 </connections>
                             </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="R7C-pj-U4y" userLabel="TableView">
-                                <rect key="frame" x="19.666666666666657" y="212" width="353.66666666666674" height="596"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="R7C-pj-U4y" userLabel="TableView">
+                                <rect key="frame" x="35.333333333333343" y="210.33333333333331" width="322.33333333333326" height="597.66666666666674"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="sectionIndexTrackingBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W3j-cU-lXV" userLabel="NoResultsView">
                                 <rect key="frame" x="39.333333333333343" y="254" width="314.33333333333326" height="429"/>
@@ -87,21 +89,21 @@
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="hQJ-ig-blp" firstAttribute="height" secondItem="vDu-zF-Fre" secondAttribute="width" multiplier="0.1" id="3PB-gL-lsv"/>
                             <constraint firstItem="PEM-MS-3Ni" firstAttribute="top" secondItem="hQJ-ig-blp" secondAttribute="bottom" constant="8" id="3SX-KW-GsT"/>
                             <constraint firstItem="R7C-pj-U4y" firstAttribute="top" secondItem="PEM-MS-3Ni" secondAttribute="bottom" constant="10" id="DlQ-7E-cwe"/>
                             <constraint firstItem="hQJ-ig-blp" firstAttribute="width" secondItem="vDu-zF-Fre" secondAttribute="width" multiplier="0.1" id="GEF-hL-14R"/>
                             <constraint firstItem="W3j-cU-lXV" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="Gu9-0t-yn5"/>
-                            <constraint firstItem="R7C-pj-U4y" firstAttribute="width" secondItem="vDu-zF-Fre" secondAttribute="width" multiplier="0.9" id="Q9i-Sp-Pkp"/>
+                            <constraint firstItem="R7C-pj-U4y" firstAttribute="width" secondItem="vDu-zF-Fre" secondAttribute="width" multiplier="0.82" id="Q9i-Sp-Pkp"/>
                             <constraint firstItem="hQJ-ig-blp" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="XtQ-yD-IDF"/>
                             <constraint firstItem="W3j-cU-lXV" firstAttribute="height" secondItem="vDu-zF-Fre" secondAttribute="height" multiplier="0.6" id="aCE-WL-49n"/>
                             <constraint firstItem="PEM-MS-3Ni" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="ajo-Sv-51z"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="R7C-pj-U4y" secondAttribute="bottom" constant="10" id="e4U-E2-om8"/>
                             <constraint firstItem="R7C-pj-U4y" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="koy-t0-s7e"/>
                             <constraint firstItem="W3j-cU-lXV" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" multiplier="1.1" id="n99-E6-s11"/>
-                            <constraint firstItem="PEM-MS-3Ni" firstAttribute="width" secondItem="vDu-zF-Fre" secondAttribute="width" multiplier="0.85" id="orA-tp-BYg"/>
+                            <constraint firstItem="PEM-MS-3Ni" firstAttribute="width" secondItem="vDu-zF-Fre" secondAttribute="width" multiplier="0.82" id="orA-tp-BYg"/>
                             <constraint firstItem="W3j-cU-lXV" firstAttribute="width" secondItem="vDu-zF-Fre" secondAttribute="width" multiplier="0.8" id="vnr-SU-h4n"/>
                             <constraint firstItem="hQJ-ig-blp" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="yDq-iP-ywD"/>
                         </constraints>
